fix token name (authorization)
